force-app/main/default/objects/Product2/fields/aset_yn__c.field-meta.xml
<CustomField>
    <fullName>aset_yn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset status</label>
    <type>Checkbox</type>
</CustomField>