force-app/main/default/objects/Product2/fields/asst_gd_nm__c.field-meta.xml
<CustomField>
    <fullName>asst_gd_nm__c</fullName>
    <label>Supplementary product name</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>