force-app/main/default/objects/Product2/fields/avg_wt__c.field-meta.xml
<CustomField>
    <fullName>avg_wt__c</fullName>
    <label>Average Weight</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>