force-app/main/default/objects/Product2/fields/box_ctcnt_qty__c.field-meta.xml
<CustomField>
    <fullName>box_ctcnt_qty__c</fullName>
    <label>Box Inflow</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>