force-app/main/default/objects/Product2/fields/brd_nm__c.field-meta.xml
<CustomField>
    <fullName>brd_nm__c</fullName>
    <label>Brand name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>