force-app/main/default/objects/Product2/fields/caut_atc_err_itm_txt__c.field-meta.xml
<CustomField>
    <fullName>caut_atc_err_itm_txt__c</fullName>
    <label>Caution Error Item Contents</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>