force-app/main/default/objects/Product2/fields/caut_atc_strg_hdl_txt__c.field-meta.xml
<CustomField>
    <fullName>caut_atc_strg_hdl_txt__c</fullName>
    <label>Precautions Storage Handling Contents</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>