force-app/main/default/objects/Product2/fields/CenterCode__c.field-meta.xml
<CustomField>
    <fullName>CenterCode__c</fullName>
    <description>상품이 출고되는 센터 코드</description>
    <label>Center Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>