force-app/main/default/objects/Product2/fields/cftr_gd_yn__c.field-meta.xml
<CustomField>
    <fullName>cftr_gd_yn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store product status</label>
    <type>Checkbox</type>
</CustomField>