force-app/main/default/objects/Product2/fields/chjd_itm_yn__c.field-meta.xml
<CustomField>
    <fullName>chjd_itm_yn__c</fullName>
    <label>CheilJedang item status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>