force-app/main/default/objects/Product2/fields/cj_gd_no__c.field-meta.xml
<CustomField>
    <fullName>cj_gd_no__c</fullName>
    <label>CJ Product Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>