force-app/main/default/objects/Product2/fields/cj_mcd_srt_cd__c.field-meta.xml
<CustomField>
    <fullName>cj_mcd_srt_cd__c</fullName>
    <label>CJ Product Structure Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>