force-app/main/default/objects/Product2/fields/co_id__c.field-meta.xml
<CustomField>
    <fullName>co_id__c</fullName>
    <description>상품유형</description>
    <externalId>true</externalId>
    <label>Company ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>