force-app/main/default/objects/Product2/fields/csmbl_yn__c.field-meta.xml
<CustomField>
    <fullName>csmbl_yn__c</fullName>
    <label>Consumables status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>