force-app/main/default/objects/Product2/fields/dstr_his_mng_yn__c.field-meta.xml
<CustomField>
    <fullName>dstr_his_mng_yn__c</fullName>
    <label>Distribution history management status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>대상아님</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>이력번호(한우/육우)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>이력번호(수입우육)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>이력번호(한돈)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>이력번호(수입돈육)</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>이력번호(수입계육)</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>이력번호(식용란)</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>이력번호(기타)</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>이력번호(국내산계육)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>