force-app/main/default/objects/Product2/fields/dstr_his_no_rpt_obj_yn__c.field-meta.xml
<CustomField>
    <fullName>dstr_his_no_rpt_obj_yn__c</fullName>
    <label>Distribution history number declaration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>미트와치</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>유니패스</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>해당없음</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>축산물이력제</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>