force-app/main/default/objects/Product2/fields/dstr_tlmt_dd_cnt__c.field-meta.xml
<CustomField>
    <fullName>dstr_tlmt_dd_cnt__c</fullName>
    <label>Expiration date days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>