force-app/main/default/objects/Product2/fields/ea_wt__c.field-meta.xml
<CustomField>
    <fullName>ea_wt__c</fullName>
    <label>EA Weight</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>