force-app/main/default/objects/Product2/fields/ekgrp_e__c.field-meta.xml
<CustomField>
    <fullName>ekgrp_e__c</fullName>
    <label>Eastern MD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>