force-app/main/default/objects/Product2/fields/ekgrp_m__c.field-meta.xml
<CustomField>
    <fullName>ekgrp_m__c</fullName>
    <label>Master MD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>