force-app/main/default/objects/Product2/fields/ekgrp_n__c.field-meta.xml
<CustomField>
    <fullName>ekgrp_n__c</fullName>
    <label>New Growth Business Headquarters MD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>