force-app/main/default/objects/Product2/fields/ekgrp_s__c.field-meta.xml
<CustomField>
    <fullName>ekgrp_s__c</fullName>
    <label>Seoul/Gyeongwon MD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>