force-app/main/default/objects/Product2/fields/ekgrp_w__c.field-meta.xml
<CustomField>
    <fullName>ekgrp_w__c</fullName>
    <label>Western MD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>