force-app/main/default/objects/Product2/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <externalId>true</externalId>
    <label>Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>