force-app/main/default/objects/Product2/fields/fd_cl_cd__c.field-meta.xml
<CustomField>
    <fullName>fd_cl_cd__c</fullName>
    <label>Food Type Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>