force-app/main/default/objects/Product2/fields/fm_LAR_CLS_ID__c.field-meta.xml
<CustomField>
    <fullName>fm_LAR_CLS_ID__c</fullName>
    <formula>ProductCategory__r.fm_LAR_CLS_ID__c</formula>
    <label>fm_LAR_CLS_ID</label>
    <type>Text</type>
</CustomField>