force-app/main/default/objects/Product2/fields/fm_MID_CLS_NM__c.field-meta.xml
<CustomField>
    <fullName>fm_MID_CLS_NM__c</fullName>
    <formula>ProductCategory__r.fm_MID_CLS_NM__c</formula>
    <label>fm_MID_CLS_NM</label>
    <type>Text</type>
</CustomField>