force-app/main/default/objects/Product2/fields/fm_TaxType__c.field-meta.xml
<CustomField>
    <fullName>fm_TaxType__c</fullName>
    <formula>CASE(
   taxt_cl_cd__c ,
   &quot;0&quot;,&quot;면세&quot;,
   &quot;2&quot;,&quot;면세&quot;,
   &quot;4&quot;,&quot;면세&quot;,
   &quot;1&quot;,&quot;과세&quot;,
   &quot;5&quot;,&quot;과세&quot;, &quot;&quot;
)</formula>
    <label>fm_TaxType</label>
    <type>Text</type>
</CustomField>