force-app/main/default/objects/Product2/fields/fm_XSM_CLS_CD__c.field-meta.xml
<CustomField>
    <fullName>fm_XSM_CLS_CD__c</fullName>
    <formula>ProductCategory__r.gd_cls_id__c</formula>
    <label>fm_XSM_CLS_CD</label>
    <type>Text</type>
</CustomField>