force-app/main/default/objects/Product2/fields/fm_XSM_CLS_NM__c.field-meta.xml
<CustomField>
    <fullName>fm_XSM_CLS_NM__c</fullName>
    <formula>ProductCategory__r.gd_cls_nm__c</formula>
    <label>fm_XSM_CLS_NM</label>
    <type>Text</type>
</CustomField>