force-app/main/default/objects/Product2/fields/fs_gd_yn__c.field-meta.xml
<CustomField>
    <fullName>fs_gd_yn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FS product status</label>
    <type>Checkbox</type>
</CustomField>