force-app/main/default/objects/Product2/fields/fw_gd_lar_id__c.field-meta.xml
<CustomField>
    <fullName>fw_gd_lar_id__c</fullName>
    <label>fw_gd_lar_id</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>가공식품</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>농산물</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>수산물</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>축산물</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>비식품</label>
            </value>
            <value>
                <fullName>59</fullName>
                <label>비상품/수수료</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>매점상품</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>CK제품</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>비품</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>공사설비</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>