force-app/main/default/objects/Product2/fields/fw_gdgrp_cd__c.field-meta.xml
<CustomField>
    <fullName>fw_gdgrp_cd__c</fullName>
    <label>Freshway Product Family Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
                <label>[11]CJ/상온</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>[12]CJ/냉장</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>[13]CJ/냉동</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>[14]CJ / 분말</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>[15]CJ / 모닝웰</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>[16]CJ / 바이오</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>[17]CJ / 생활</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>[18]CJ / 냉장</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>[19]CJ / 기타</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>[51]FS/농산물</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>[52]FS/축산물</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>[53]FS/수산물</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>[54]FS/가공식품</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>[55]FS/비식품</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>