force-app/main/default/objects/Product2/fields/gd_bd__c.field-meta.xml
<CustomField>
    <fullName>gd_bd__c</fullName>
    <label>Product details</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>