force-app/main/default/objects/Product2/fields/gd_cl_div_cd__c.field-meta.xml
<CustomField>
    <fullName>gd_cl_div_cd__c</fullName>
    <label>Product type classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HAW3</fullName>
                <label>설비자재</label>
            </value>
            <value>
                <fullName>HAW1</fullName>
                <label>상품(일반)</label>
            </value>
            <value>
                <fullName>HAW2</fullName>
                <label>상품(매점)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>