force-app/main/default/objects/Product2/fields/gd_cls_id__c.field-meta.xml
<CustomField>
    <fullName>gd_cls_id__c</fullName>
    <label>Product classification ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>