force-app/main/default/objects/Product2/fields/gd_crgr_id__c.field-meta.xml
<CustomField>
    <fullName>gd_crgr_id__c</fullName>
    <label>Product Contact ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>