force-app/main/default/objects/Product2/fields/gd_en_nm__c.field-meta.xml
<CustomField>
    <fullName>gd_en_nm__c</fullName>
    <label>Product English name</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>