force-app/main/default/objects/Product2/fields/gd_md_grp_cd__c.field-meta.xml
<CustomField>
    <fullName>gd_md_grp_cd__c</fullName>
    <label>Product MD Group Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>800</fullName>
                <label>한일 인천점</label>
            </value>
            <value>
                <fullName>810</fullName>
                <label>한일 동서울점</label>
            </value>
            <value>
                <fullName>820</fullName>
                <label>한일 광명점</label>
            </value>
            <value>
                <fullName>830</fullName>
                <label>한일 수원점</label>
            </value>
            <value>
                <fullName>840</fullName>
                <label>한일 직거래점</label>
            </value>
            <value>
                <fullName>900</fullName>
                <label>한일 강서점</label>
            </value>
            <value>
                <fullName>901</fullName>
                <label>한일 마포점</label>
            </value>
            <value>
                <fullName>902</fullName>
                <label>한일 영등포점</label>
            </value>
            <value>
                <fullName>903</fullName>
                <label>한일 노원점</label>
            </value>
            <value>
                <fullName>905</fullName>
                <label>한일 강남점</label>
            </value>
            <value>
                <fullName>906</fullName>
                <label>한일 김포점</label>
            </value>
            <value>
                <fullName>907</fullName>
                <label>한일 의정부점</label>
            </value>
            <value>
                <fullName>908</fullName>
                <label>한일 포천점</label>
            </value>
            <value>
                <fullName>909</fullName>
                <label>한일 대치점</label>
            </value>
            <value>
                <fullName>A01</fullName>
                <label>김종선</label>
            </value>
            <value>
                <fullName>A02</fullName>
                <label>최광수</label>
            </value>
            <value>
                <fullName>A03</fullName>
                <label>아영진</label>
            </value>
            <value>
                <fullName>A04</fullName>
                <label>이대섭</label>
            </value>
            <value>
                <fullName>A05</fullName>
                <label>이상일</label>
            </value>
            <value>
                <fullName>A06</fullName>
                <label>이영주</label>
            </value>
            <value>
                <fullName>A07</fullName>
                <label>손지영</label>
            </value>
            <value>
                <fullName>A08</fullName>
                <label>전인왕</label>
            </value>
            <value>
                <fullName>A09</fullName>
                <label>이권홍</label>
            </value>
            <value>
                <fullName>A10</fullName>
                <label>이상호</label>
            </value>
            <value>
                <fullName>A11</fullName>
                <label>고영민</label>
            </value>
            <value>
                <fullName>A12</fullName>
                <label>박준호</label>
            </value>
            <value>
                <fullName>A13</fullName>
                <label>유윤석</label>
            </value>
            <value>
                <fullName>A14</fullName>
                <label>송호섭</label>
            </value>
            <value>
                <fullName>A15</fullName>
                <label>이휘연</label>
            </value>
            <value>
                <fullName>A16</fullName>
                <label>이범진</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>