force-app/main/default/objects/Product2/fields/gd_nm__c.field-meta.xml
<CustomField>
    <fullName>gd_nm__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>