force-app/main/default/objects/Product2/fields/gd_no__c.field-meta.xml
<CustomField>
    <fullName>gd_no__c</fullName>
    <externalId>true</externalId>
    <label>Product number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>