force-app/main/default/objects/Product2/fields/gd_stds_txt__c.field-meta.xml
<CustomField>
    <fullName>gd_stds_txt__c</fullName>
    <label>Product specification content</label>
    <length>100</length>
    <type>Text</type>
</CustomField>