force-app/main/default/objects/Product2/fields/gd_tot_wt__c.field-meta.xml
<CustomField>
    <fullName>gd_tot_wt__c</fullName>
    <label>Total weight of goods</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>