force-app/main/default/objects/Product2/fields/gd_us_stts__c.field-meta.xml
<CustomField>
    <fullName>gd_us_stts__c</fullName>
    <description>도메인 Product
속성 STATUS</description>
    <label>Product usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BLCK</fullName>
                <label>[BLCK]사용중지</label>
            </value>
            <value>
                <fullName>NRML</fullName>
                <label>[NRML]사용중</label>
            </value>
            <value>
                <fullName>TEMP</fullName>
                <label>[TEMP]현지구매</label>
            </value>
            <value>
                <fullName>WAIT</fullName>
                <label>[WAIT]보류</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>