force-app/main/default/objects/Product2/fields/gd_us_txt__c.field-meta.xml
<CustomField>
    <fullName>gd_us_txt__c</fullName>
    <label>Contents of product use</label>
    <length>100</length>
    <type>Text</type>
</CustomField>