force-app/main/default/objects/Product2/fields/isliq__c.field-meta.xml
<CustomField>
    <fullName>isliq__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liquor status</label>
    <type>Checkbox</type>
</CustomField>