force-app/main/default/objects/Product2/fields/IsTaxFreeYN__c.field-meta.xml
<CustomField>
    <fullName>IsTaxFreeYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>제품의 면세 여부</description>
    <label>Tax Free Y/N</label>
    <type>Checkbox</type>
</CustomField>