force-app/main/default/objects/Product2/fields/itm_cl_cd__c.field-meta.xml
<CustomField>
    <fullName>itm_cl_cd__c</fullName>
    <label>Item type code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>