force-app/main/default/objects/Product2/fields/lgl_dstr_tlmt_end_ymd__c.field-meta.xml
<CustomField>
    <fullName>lgl_dstr_tlmt_end_ymd__c</fullName>
    <label>Legal expiration date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>