force-app/main/default/objects/Product2/fields/lgl_nd_cmpo_bd__c.field-meta.xml
<CustomField>
    <fullName>lgl_nd_cmpo_bd__c</fullName>
    <label>Legal requirements breakdown</label>
    <length>200</length>
    <type>Text</type>
</CustomField>